[tool.poetry]
name = "util-with-streamlit"
version = "0.1.0"
description = ""
authors = ["Jun Park <pj2417@gmail.com>"]
readme = "README.md"
# packages = [{include = "util_with_streamlit"}]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.24.1"
yt-dlp = "^2023.7.6"
pydub = "^0.25.1"
langchain = "^0.0.228"
openai = "^0.27.8"
python-ulid = "^1.1.0"
youtube-transcript-api = "^0.6.1"
ffmpeg-python = "^0.2.0"
scikit-image = "^0.21.0"
rembg = { version = "^2.0.49", python = ">=3.11,<3.12" }
numba = "^0.57.1"
numpy = "^1.24.4"
onnxruntime = "^1.15.1"
opencv-python-headless = "^4.8.0.74"
pooch = "^1.7.0"
pymatting = "^1.1.8"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pre-commit = "^3.3.3"
llvmlite = "0.40.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
